tests/specs/npm/node_modules_import/main_check.out
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const value1: string = myImport1.getValue();
      ~~~~~~
    at file:///[WILDCARD]/main.ts:9:7

TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const value2: string = myImport2.getValue();
      ~~~~~~
    at file:///[WILDCARD]/main.ts:10:7

TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const value3: string = myImport3.getValue();
      ~~~~~~
    at file:///[WILDCARD]/main.ts:11:7

Found 3 errors.
